--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true"> <!--translucent 는 반투명 탭을 의미한다. -->
   <ion-toolbar>
     <ion-title>
-      학부모 홈화면
+      내정보 화면
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,9 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Tab 4</ion-title>
     </ion-toolbar>
   </ion-header>
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <app-explore-container name="Tab 4 page"></app-explore-container>
   
 </ion-content>
