--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,69 @@
 <ion-header [translucent]="true"> <!--translucent 는 반투명 탭을 의미한다. -->
-  <ion-toolbar>
-    <ion-title>
-      학부모 홈화면
-    </ion-title>
+  
+  <ion-toolbar> 
+    <div class="header_color">
+
+      <ion-segment (ionChange)="segmentChanged($event)"> <!-- 같은 라인에 포함된 태그들을 출력시켜준다. -->
+        <ion-title>SchoolCode</ion-title>
+        <ion-searchbar showCancelButton="focus" cancelButtonText="Custom Cancel" animated></ion-searchbar>
+      </ion-segment>
+      
+    </div>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <app-explore-container name="Tab 1 page"></app-explore-container>
-  
+
+
+<ion-content [fullscreen]="true">  <!--컨테이너 안에다가 집어넣어야 html 화면에 나온다. -->
+    <div class="center_container1">
+      <h1>성결 고등학교</h1>
+    </div> 
+    <ion-button expand="full"  class="button-inner">
+      <div>
+        알림 사항이 뜨는곳
+      </div>
+      
+    </ion-button>
+    <ion-card>
+      <ion-item>
+        <ion-label>선생님 사진 자리</ion-label>
+        <ion-button fill="outline" slot="end">QR코드 리스너</ion-button>
+      </ion-item>
+    
+      <ion-card-content>
+        김도윤 선생님
+      </ion-card-content>
+    </ion-card>
+
+    
+    <ion-segment (ionChange)="segmentChanged($event)">
+      <ion-card class="cardback-fit">
+        <ion-item>
+          <ion-label>  오늘의 급식</ion-label>
+        </ion-item>
+       
+
+      
+        <ion-card-content>
+          <ion-button fill="outline" slot="end" class="ion-activated">급식표</ion-button>
+        </ion-card-content>
+      </ion-card>
+
+      <ion-card class="cardback-fit"> <!--card 태그의 백그라운드 크기를 조절하기위한 클래스 , scss 파일에서 수정 가능 -->
+        <ion-item>
+          <ion-label>1반 자유게시판</ion-label>
+          
+        </ion-item>
+      
+        <ion-card-content>
+          자유게시판표
+        </ion-card-content>
+      </ion-card>
+      
+    </ion-segment>
+
+
+
+
 </ion-content>
+
