--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,36 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
+<ion-header [translucent]="true"> <!--translucent 는 반투명 탭을 의미한다. -->
+  
+  <ion-toolbar> 
+    <div class="header_color">
+
+      <ion-segment (ionChange)="segmentChanged($event)"> <!-- 같은 라인에 포함된 태그들을 출력시켜준다. -->
+        <ion-title>SchoolCode</ion-title>
+        <ion-searchbar showCancelButton="focus" cancelButtonText="Custom Cancel" animated></ion-searchbar>
+      </ion-segment>
+      
+    </div>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+<ion-content [fullscreen]="true">
+  <div>
+    <h2 class="center_container1">기록일지</h2>
+  </div>
+
+
+  <span class="float_left">축제/행사
+    <div>
+      <ion-button fill="outline" slot="end" class="festival_button_size">명단 생성</ion-button>
+    </div>
+    <div>
+      <ion-button fill="outline" slot="end" class="festival_button_size">명단 확인</ion-button>
+    </div>
+  </span>
+  <span class="float_right">
+    <ion-button class="myclass_button_size">우리반 명단</ion-button>
+  </span>
+
+
+
 </ion-content>
