--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -17,7 +17,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="tab4">
-      <ion-icon name="calendar-outline"></ion-icon>
+      <ion-icon name="person-outline"></ion-icon>
       <ion-label>내정보</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
