--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true"> <!--translucent 는 반투명 탭을 의미한다. -->
+<ion-header [translucent]="true"> <!--translucent 는 반투명 탭을 의미한다.  이게 맞는거냐-->
   
   <ion-toolbar> 
     <div class="header_color">
@@ -15,6 +15,10 @@
 
 
 <ion-content [fullscreen]="true">
+  <div>
+    <h2 class="center_container1">기록일지</h2>
+  </div>
+
   <div>
     <h2 class="center_container1">기록일지</h2>
   </div>
