--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -19,6 +19,10 @@
     <h2 class="center_container1">기록일지</h2>
   </div>
 
+  <div>
+    <h2 class="center_container1">기록일지</h2>
+  </div>
+
   
 
   <span class="float_left">축제/행사
